[package]
name = "chihlee-cal-worker"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
chihlee-cal-to-csv = { path = "vendor/chihlee-cal-to-csv", package = "chihlee-cal-to-csv" }
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"
urlencoding = "2.1.3"
worker = "0.7.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
